@@ -1,10 +1,11 @@
 #ifndef ENSEN_SIGNAL_H
 #define ENSEN_SIGNAL_H
 
-#include "signal_fit.h"
-#include "signal_data.h"
-#include "signal_form_gaussian.h"
-#include "signal_form_random.h"
-#include "signal_generator.h"
+#include "ensen_private.h"
+
+#include "ensen_signal_fit.h"
+#include "ensen_signal_form_gaussian.h"
+#include "ensen_signal_form_random.h"
+#include "ensen_signal_generator.h"
 
 #endif
