@@ -1,5 +1,5 @@
-#ifndef SIGNAL_FORM_GAUSSIAN_H
-#define SIGNAL_FORM_GAUSSIAN_H
+#ifndef ENSEN_SIGNAL_FORM_GAUSSIAN_H
+#define ENSEN_SIGNAL_FORM_GAUSSIAN_H
 
 data_t gaussian_old(void); // OLD. To be deleted 
 data_t gaussian(data_t x, data_t pos, data_t wid);
