@@ -1,17 +1,17 @@
 ensen_header_src = files([
+   'ensen_benchmark.h', 
    'ensen_signal.h',
    'ensen_math.h',
    'ensen_config_dictionary.h',
    'ensen_config.h',
    'ensen_ui.h',
    'ensen_private.h', 
-   'math_fftw_utils.h'
-   'math_random.h',
-   'signal_data.h',
-   'signal_form_random.h',
-   'signal_form_gaussian.h',
-   'signal_generator.h',
-   'ui_gnuplot.h',
+   'ensen_math_fftw_utils.h'
+   'ensen_math_random.h',
+   'ensen_signal_form_random.h',
+   'ensen_signal_form_gaussian.h',
+   'ensen_signal_generator.h',
+   'ensen_ui_gnuplot.h',
 ])
 
 install_headers(ensen_header_src,
